@@ -336,7 +336,7 @@ M108 S0
                         <axis id="z" length="210" maxfeedrate="150" stepspermm="160" endstops="min"/> <!-- quarter-step driver -->
                 </geometry>
                 <tools>
-                        <tool name="Stepper-based pinch extruder" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true" heatedplatform="true" motor_steps="200" />
+                        <tool name="Stepper-based pinch extruder" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true" heatedplatform="true" motor_steps="200" default_rpm="1000" default_pwm="255" />
                 </tools>
                 <clamps></clamps>
                 <firmware url="http://firmware.ultimaker.com/latest" autoupgrade="false"></firmware>
